--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .wrapper {
-  width: 1000px;
+  width: 1280px;
   min-height: 100vh;
   margin: auto;
   display: flex;
@@ -9,4 +9,24 @@
 }
 #preview {
   border: 1px solid grey;
+}
+code {
+  display: block;
+  margin: 4px auto;
+  font-size: 16px;
+}
+.inline-code {
+  display: inline-block;
+}
+blockquote {
+  border-left: 3px solid #224b4b;
+  color: #224b4b;
+  padding-left: 5px;
+  margin-left: 25px;
+}
+table {
+  border-collapse: collapse;
+}
+table th, table td {
+  border: 1px solid black;
 }
